Prevent project buttons from overlapping with content

--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ input {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   grid-column: 2 / 3;
   grid-row: 2 / 4;
   gap: 20px;
